Created a separate test policy referenced by the chainsaw test. Undid changes to the original policy
Signed-off-by: Jay179-sudo <jayprasad2002@gmail.com>

--- a/cleanup/cleanup-bare-pods/.chainsaw-test/chainsaw-test.yaml
+++ b/cleanup/cleanup-bare-pods/.chainsaw-test/chainsaw-test.yaml
@@ -17,9 +17,9 @@ spec:
     - name: apply cleanup policy
       try:
         - apply:
-            file: ../cleanup-bare-pods.yaml
+            file: cleanup-bare-pods-test.yaml
         - assert:
-            file: ../cleanup-bare-pods.yaml
+            file: cleanup-bare-pods-test.yaml
     - name: wait for scheduled deletion
       try:
         - sleep:
