--- a/cleanup/cleanup-bare-pods/clusterrole.yaml
+++ b/cleanup/cleanup-bare-pods/clusterrole.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/component: cleanup-controller
     app.kubernetes.io/instance: kyverno
     app.kubernetes.io/part-of: kyverno
-  name: kyverno:cleanup-controller:temp
+  name: kyverno:cleanup-controller:barepods
 rules:
 - apiGroups:
   - ""
