--- a/windows-pod-security/restricted/require-run-as-containeruser/require-run-as-containeruser.yaml
+++ b/windows-pod-security/restricted/require-run-as-containeruser/require-run-as-containeruser.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: require-run-as-containeruser
   annotations:
-    policies.kyverno.io/title: Require Run As ContainerUser
+    policies.kyverno.io/title: Require Run As ContainerUser (Windows)
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
@@ -42,4 +42,3 @@ spec:
               - =(securityContext):
                   =(windowsOptions):
                     =(runAsUserName): "ContainerUser"
-
