--- a/cleanup/cleanup-bare-pods/.chainsaw-test/chainsaw-test.yaml
+++ b/cleanup/cleanup-bare-pods/.chainsaw-test/chainsaw-test.yaml
@@ -4,10 +4,10 @@ metadata:
   name: cleanup-bare-pods
 spec:
   steps:
-    - name: apply clusterrole
+    - name: apply cluster role
       try:
         - apply:
-            file: clusterrole.yaml
+            file: cluster-role.yaml
     - name: create a bare pod
       try:
         - apply:
