update best-practices-cel policies to specify CREATE and UPDATE operations
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/best-practices-cel/disallow-default-namespace/disallow-default-namespace.yaml
+++ b/best-practices-cel/disallow-default-namespace/disallow-default-namespace.yaml
@@ -28,6 +28,9 @@ spec:
       - resources:
           kinds:
           - Pod
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
@@ -42,6 +45,9 @@ spec:
           - Deployment
           - Job
           - StatefulSet
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
