--- a/best-practices-cel/require-probes/require-probes.yaml
+++ b/best-practices-cel/require-probes/require-probes.yaml
@@ -28,6 +28,9 @@ spec:
       - resources:
           kinds:
           - Pod
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
