--- a/best-practices-cel/disallow-empty-ingress-host/disallow-empty-ingress-host.yaml
+++ b/best-practices-cel/disallow-empty-ingress-host/disallow-empty-ingress-host.yaml
@@ -23,6 +23,9 @@ spec:
         - resources:
             kinds:
               - Ingress
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
