--- a/best-practices-cel/restrict-service-external-ips/restrict-service-external-ips.yaml
+++ b/best-practices-cel/restrict-service-external-ips/restrict-service-external-ips.yaml
@@ -24,6 +24,9 @@ spec:
       - resources:
           kinds:
           - Service
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
