update pod-security-cel policies to specify CREATE and UPDATE operations
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/pod-security-cel/baseline/disallow-capabilities/disallow-capabilities.yaml
+++ b/pod-security-cel/baseline/disallow-capabilities/disallow-capabilities.yaml
@@ -21,6 +21,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
