--- a/pod-security-cel/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
+++ b/pod-security-cel/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
@@ -23,6 +23,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         message: >-
           Containers must drop `ALL` capabilities.
@@ -53,6 +56,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
