--- a/pod-security-cel/baseline/disallow-selinux/disallow-selinux.yaml
+++ b/pod-security-cel/baseline/disallow-selinux/disallow-selinux.yaml
@@ -23,6 +23,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
@@ -77,6 +80,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
