--- a/pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
+++ b/pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
@@ -23,6 +23,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
