fix failing tests
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/require-storageclass/require-storageclass.yaml
+++ b/other-cel/require-storageclass/require-storageclass.yaml
@@ -39,6 +39,9 @@ spec:
       - resources:
           kinds:
           - StatefulSet
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
