--- a/other-cel/restrict-secrets-by-name/restrict-secrets-by-name.yaml
+++ b/other-cel/restrict-secrets-by-name/restrict-secrets-by-name.yaml
@@ -46,6 +46,9 @@ spec:
       - resources:
           kinds:
           - Pod
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         variables:
@@ -63,6 +66,9 @@ spec:
       - resources:
           kinds:
           - Pod
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
