--- a/kasten/kasten-minimum-retention/kasten-minimum-retention.yaml
+++ b/kasten/kasten-minimum-retention/kasten-minimum-retention.yaml
@@ -11,7 +11,7 @@ metadata:
     policies.kyverno.io/subject: Policy
     policies.kyverno.io/description: >-
       Kasten Policy resources can be validated to adhere to common compliance retention standards. 
-      Based on regulation/compliance standard requirements, uncomment (1) of the desired GFS retention schedules to mutate existing and future Kasten Policies. Alternatively, this policy can be used go reduce retention lengths to enforce cost optimization.
+      Based on regulation/compliance standard requirements, uncomment (1) of the desired GFS retention schedules to mutate existing and future Kasten Policies. Alternatively, this policy can be used to reduce retention lengths to enforce cost optimization.
     
       NOTE: Only applies to Kasten Policies with an '@hourly' frequency. Refer to Kasten documentation for Policy API specification if modifications are necessary: https://docs.kasten.io/latest/api/policies.html#policy-api-type
 spec:
