update policies to specify CREATE and UPDATE operations
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/argo-cel/application-field-validation/application-field-validation.yaml
+++ b/argo-cel/application-field-validation/application-field-validation.yaml
@@ -24,6 +24,9 @@ spec:
         - resources:
             kinds:
             - Application
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
@@ -41,6 +44,9 @@ spec:
         - resources:
             kinds:
             - Application
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
