--- a/argo-cel/application-prevent-default-project/application-prevent-default-project.yaml
+++ b/argo-cel/application-prevent-default-project/application-prevent-default-project.yaml
@@ -22,6 +22,9 @@ spec:
         - resources:
             kinds:
               - Application
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
