--- a/argo-cel/appproject-clusterresourceblacklist/appproject-clusterresourceblacklist.yaml
+++ b/argo-cel/appproject-clusterresourceblacklist/appproject-clusterresourceblacklist.yaml
@@ -26,6 +26,9 @@ spec:
         - resources:
             kinds:
               - AppProject
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
