--- a/aws-cel/require-encryption-aws-loadbalancers/require-encryption-aws-loadbalancers.yaml
+++ b/aws-cel/require-encryption-aws-loadbalancers/require-encryption-aws-loadbalancers.yaml
@@ -24,6 +24,9 @@ spec:
       - resources:
           kinds:
           - Service
+          operations:
+          - CREATE
+          - UPDATE
     celPreconditions: 
       - name: "type-should-be-load-balancer"
         expression: "object.spec.type == 'LoadBalancer'"
