--- a/flux-cel/verify-git-repositories/verify-git-repositories.yaml
+++ b/flux-cel/verify-git-repositories/verify-git-repositories.yaml
@@ -23,6 +23,9 @@ spec:
         - resources:
             kinds:
               - GitRepository
+            operations:
+            - CREATE
+            - UPDATE
       exclude:
         any:
         - resources:
