--- a/argo-cel/applicationset-name-matches-project/applicationset-name-matches-project.yaml
+++ b/argo-cel/applicationset-name-matches-project/applicationset-name-matches-project.yaml
@@ -23,6 +23,9 @@ spec:
         - resources:
             kinds:
               - ApplicationSet
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
