--- a/consul-cel/enforce-min-tls-version/enforce-min-tls-version.yaml
+++ b/consul-cel/enforce-min-tls-version/enforce-min-tls-version.yaml
@@ -22,6 +22,9 @@ spec:
       - resources:
           kinds:
             - Mesh
+          operations:
+            - CREATE
+            - UPDATE
     validate:
       cel:
         expressions:
