add CREATE and UPDATE operations
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/deny-commands-in-exec-probe/deny-commands-in-exec-probe.yaml
+++ b/other-cel/deny-commands-in-exec-probe/deny-commands-in-exec-probe.yaml
@@ -24,6 +24,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       celPreconditions:
         - name: "check-liveness-probes-commands-exist"
           expression: >-
