--- a/other-cel/limit-hostpath-vols/limit-hostpath-vols.yaml
+++ b/other-cel/limit-hostpath-vols/limit-hostpath-vols.yaml
@@ -27,6 +27,9 @@ spec:
       - resources:
           kinds:
           - Pod
+          operations:
+          - CREATE
+          - UPDATE
     celPreconditions:
       - name: "has-host-path-volume"
         expression: "has(object.spec.volumes) && object.spec.volumes.exists(volume, has(volume.hostPath))"
