--- a/other-cel/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
+++ b/other-cel/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
@@ -27,6 +27,9 @@ spec:
         - resources:
             kinds:
             - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           paramKind: 
