--- a/other-cel/require-non-root-groups/require-non-root-groups.yaml
+++ b/other-cel/require-non-root-groups/require-non-root-groups.yaml
@@ -25,6 +25,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           variables:
@@ -51,6 +54,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
@@ -67,6 +73,9 @@ spec:
         - resources:
             kinds:
               - Pod
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
