--- a/other-cel/require-qos-guaranteed/require-qos-guaranteed.yaml
+++ b/other-cel/require-qos-guaranteed/require-qos-guaranteed.yaml
@@ -28,6 +28,9 @@ spec:
       - resources:
           kinds:
           - Pod
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
