add CREATE and UPDATE operations explicitly
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/istio-cel/enforce-sidecar-injection-namespace/enforce-sidecar-injection-namespace.yaml
+++ b/istio-cel/enforce-sidecar-injection-namespace/enforce-sidecar-injection-namespace.yaml
@@ -24,6 +24,8 @@ spec:
       - resources:
           kinds:
           - Namespace
+          operations:
+          - CREATE
     validate:
       cel:
         expressions:
