--- a/istio-cel/enforce-strict-mtls/enforce-strict-mtls.yaml
+++ b/istio-cel/enforce-strict-mtls/enforce-strict-mtls.yaml
@@ -27,6 +27,9 @@ spec:
       - resources:
           kinds:
           - PeerAuthentication
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
