--- a/kasten-cel/k10-data-protection-by-label/k10-data-protection-by-label.yaml
+++ b/kasten-cel/k10-data-protection-by-label/k10-data-protection-by-label.yaml
@@ -22,6 +22,9 @@ spec:
           kinds:
           - Deployment
           - StatefulSet
+          operations:
+          - CREATE
+          - UPDATE
           selector:
             matchLabels:
               purpose: production
