--- a/kasten-cel/k10-hourly-rpo/k10-hourly-rpo.yaml
+++ b/kasten-cel/k10-hourly-rpo/k10-hourly-rpo.yaml
@@ -21,6 +21,9 @@ spec:
       - resources:
           kinds:
           - config.kio.kasten.io/v1alpha1/Policy
+          operations:
+          - CREATE
+          - UPDATE
           selector:
             matchLabels:
               appPriority: Mission-Critical
