specify CREATE and UPDATE operations explicitly
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/nginx-ingress-cel/disallow-ingress-nginx-custom-snippets/disallow-ingress-nginx-custom-snippets.yaml
+++ b/nginx-ingress-cel/disallow-ingress-nginx-custom-snippets/disallow-ingress-nginx-custom-snippets.yaml
@@ -23,7 +23,10 @@ spec:
         any:
         - resources:
             kinds:
-            - ConfigMap      
+            - ConfigMap
+            operations:
+            - CREATE
+            - UPDATE      
       validate:
         cel:
           expressions:
@@ -34,7 +37,10 @@ spec:
         any:
         - resources:
             kinds:
-            - networking.k8s.io/v1/Ingress            
+            - networking.k8s.io/v1/Ingress   
+            operations:
+            - CREATE
+            - UPDATE         
       validate:
         cel:
           expressions:
