--- a/openshift-cel/disallow-jenkins-pipeline-strategy/disallow-jenkins-pipeline-strategy.yaml
+++ b/openshift-cel/disallow-jenkins-pipeline-strategy/disallow-jenkins-pipeline-strategy.yaml
@@ -23,6 +23,9 @@ spec:
           kinds:
           - v1/BuildConfig
           - build.openshift.io/v1/BuildConfig
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
