--- a/openshift-cel/disallow-security-context-constraint-anyuid/disallow-security-context-constraint-anyuid.yaml
+++ b/openshift-cel/disallow-security-context-constraint-anyuid/disallow-security-context-constraint-anyuid.yaml
@@ -23,6 +23,9 @@ spec:
           kinds:
           - ClusterRole
           - Role
+          operations:
+          - CREATE
+          - UPDATE
     validate: 
       cel:
         expressions:
@@ -36,6 +39,9 @@ spec:
           kinds:
           - ClusterRoleBinding
           - RoleBinding
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
