--- a/psa-cel/add-psa-namespace-reporting/add-psa-namespace-reporting.yaml
+++ b/psa-cel/add-psa-namespace-reporting/add-psa-namespace-reporting.yaml
@@ -31,6 +31,9 @@ spec:
       - resources:
           kinds:
             - Namespace
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
