--- a/linkerd-cel/require-linkerd-mesh-injection/require-linkerd-mesh-injection.yaml
+++ b/linkerd-cel/require-linkerd-mesh-injection/require-linkerd-mesh-injection.yaml
@@ -23,6 +23,9 @@ spec:
       - resources:
           kinds:
           - Namespace
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
