--- a/openshift-cel/check-routes/check-routes.yaml
+++ b/openshift-cel/check-routes/check-routes.yaml
@@ -22,6 +22,9 @@ spec:
         - resources:
             kinds:
               - route.openshift.io/v1/Route
+            operations:
+            - CREATE
+            - UPDATE
       validate:
         cel:
           expressions:
