--- a/openshift-cel/enforce-etcd-encryption/enforce-etcd-encryption.yaml
+++ b/openshift-cel/enforce-etcd-encryption/enforce-etcd-encryption.yaml
@@ -22,6 +22,9 @@ spec:
       - resources:
           kinds:
           - config.openshift.io/v1/APIServer
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
