explicitly specify CREATE and UPDATE operations
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/velero-cel/block-velero-restore/block-velero-restore.yaml
+++ b/velero-cel/block-velero-restore/block-velero-restore.yaml
@@ -24,6 +24,9 @@ spec:
       - resources:
           kinds:
           - velero.io/v1/Restore
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         variables:
