--- a/tekton-cel/block-tekton-task-runs/block-tekton-task-runs.yaml
+++ b/tekton-cel/block-tekton-task-runs/block-tekton-task-runs.yaml
@@ -22,6 +22,9 @@ spec:
       - resources:
           kinds:
             - TaskRun
+          operations:
+          - CREATE
+          - UPDATE
     exclude:
       any:
       - subjects:
