--- a/tekton-cel/require-tekton-bundle/require-tekton-bundle.yaml
+++ b/tekton-cel/require-tekton-bundle/require-tekton-bundle.yaml
@@ -22,6 +22,9 @@ spec:
       - resources:
           kinds:
           - PipelineRun
+          operations:
+          - CREATE
+          - UPDATE
     validate:
       cel:
         expressions:
