feat: add miscellaneous policies in CEL expressions - Part 2 (#1004)
* copy enforce-sidecar-injection-namespace

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for enforce-sidecar-injection-namespace

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert enforce-sidecar-injection-namespace

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy enforce-strict-mtls

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for enforce-strict-mtls

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert enforce-strict-mtls

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy enforce-tls-hosts-host-subnets

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for enforce-tls-hosts-host-subnets

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert enforce-tls-hosts-host-subnets

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy prevent-disabling-injection-pods

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* make corrections in chainsaw resources

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add kyverno tests for prevent-disabling-injection-pods

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert prevent-disabling-injection-pods

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy restrict-virtual-service-wildcard

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert restrict-virtual-service-wildcard

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* add CI tests for istio-cel

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* copy require-kubecost-labels

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* correct chainsaw resource

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* convert require-kubecost-labels

Signed-off-by: Chandan-DK <chandandk468@gmail.com>

* correct chainsaw resource

Signed-off-by: Chandan-DK <chandandk468@gmail

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,9 +44,12 @@ jobs:
           - ^flux$
           - ^flux-cel$
           - ^istio$
+          - ^istio-cel$
           - ^karpenter$
           - ^kasten$
+          - ^kasten-cel$
           - ^kubecost$
+          - ^kubecost-cel$
           - ^kubeops$
           - ^kubevirt$
           - ^linkerd$
