--- a/pod-security/restricted/restrict-volume-types/.chainsaw-test/chainsaw-test.yaml
+++ b/pod-security/restricted/restrict-volume-types/.chainsaw-test/chainsaw-test.yaml
@@ -9,8 +9,6 @@ spec:
   - name: step-01
     try:
     - apply:
-        file: ns.yaml
-    - apply:
         file: ../restrict-volume-types.yaml
     - patch:
         resource:
@@ -41,5 +39,8 @@ spec:
   - name: step-99
     try:
     - script:
-        content: kubectl delete all --all --force --grace-period=0 -n restrict-voltypes-ns
+        env:
+        - name: NAMESPACE
+          value: $namespace
+        content: kubectl delete all --all --force --grace-period=0 -n $NAMESPACE
 
