added windows-security in workflows test.yml
Signed-off-by: anuddeeph1 <anudeep.nalla@nirmata.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,7 @@ jobs:
           # - ^tekton
           # - ^traefik
           # - ^velero
-          - ^windows-pod-security$
+          - ^windows-security$
     runs-on: ubuntu-latest
     name: ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
     steps:
