Updated the policy and chainsaw tests
Signed-off-by: nsagark <sagar@nirmata.com>

--- a/other/require-image-checksum/require-image-checksum.yaml
+++ b/other/require-image-checksum/require-image-checksum.yaml
@@ -27,11 +27,8 @@ spec:
       pattern:
         spec:
           containers:
-          - (name): "*"
-            image: "*@sha256:*"
+          - image: "*@*"
           =(ephemeralContainers):
-            - =(name): "*"
-              image: "*@sha256:*"
+            - image: "*@*"
           =(initContainers):
-            - =(name): "*"
-              image: "*@sha256:*"        
+            - image: "*@*"        
