--- a/other/check-hpa-exists/check-hpa-exists.yaml
+++ b/other/check-hpa-exists/check-hpa-exists.yaml
@@ -11,10 +11,10 @@ metadata:
     kyverno.io/kubernetes-version: "1.28"
     policies.kyverno.io/subject: Deployment
     policies.kyverno.io/description: >-
-      This policy ensures that Deployments are only allowed if they have a corresponding
-      Horizontal Pod Autoscaler (HPA) configured in the same namespace. The policy checks
-      for the presence of an HPA that targets the Deployment and denies the creation or update
-      of the Deployment if no such HPA exists. This policy helps enforce scaling practices
+      This policy ensures that Deployments, ReplicaSets, StatefulSets, and DaemonSets are only allowed
+      if they have a corresponding Horizontal Pod Autoscaler (HPA) configured in the same namespace.
+      The policy checks for the presence of an HPA that targets the resource and denies the creation or update
+      of the resource if no such HPA exists. This policy helps enforce scaling practices
       and ensures that resources are managed efficiently.
 spec:
   validationFailureAction: Audit
@@ -22,9 +22,13 @@ spec:
   rules:
     - name: validate-hpa
       match:
-        resources:
-          kinds:
-          - Deployment
+        any:
+        - resources:
+            kinds:
+            - Deployment
+            - ReplicaSet
+            - StatefulSet
+            - DaemonSet
       context:
         - name: hpas
           apiCall:
@@ -36,5 +40,5 @@ spec:
           conditions:
             all:
               - key: "{{ request.object.metadata.name }}"
-                operator: NotIn
+                operator: AnyNotIn
                 value: "{{ hpas }}"
