added windows-security in test.yml
Signed-off-by: anuddeeph1 <anudeep.nalla@nirmata.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,6 +81,7 @@ jobs:
           - ^traefik$
           - ^traefik-cel$
           - ^velero$
+          - ^windows-security$
     runs-on: ubuntu-latest
     name: ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
     steps:
