--- a/other/verify-image-with-multi-keys/verify-image-with-multi-keys.yaml
+++ b/other/verify-image-with-multi-keys/verify-image-with-multi-keys.yaml
@@ -15,7 +15,7 @@ metadata:
       the parties involved in the creation process. This image
       verification policy requires the named image be signed by
       two separate keys. It will search for a global "production"
-      key in a ConfigMap called `key` in the `default` Namespace
+      key in a ConfigMap called `keys` in the `default` Namespace
       and also a Namespace key in the same ConfigMap.
 spec:
   validationFailureAction: enforce
