--- a/other/require-cpu-limits/.chainsaw-test/pod-bad.yaml
+++ b/other/require-cpu-limits/.chainsaw-test/pod-bad.yaml
@@ -10,27 +10,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: badpod02
-spec:
-  containers:
-  - name: container01
-    image: busybox:1.35
----
-apiVersion: v1
-kind: Pod
-metadata:
   name: badpod03
-spec:
-  containers:
-  - name: container01
-    image: busybox:1.35
-  - name: container02
-    image: busybox:1.35
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: badpod04
 spec:
   containers:
   - name: container01
@@ -60,6 +40,9 @@ spec:
     image: busybox:1.35
   - name: initcontainer02
     image: busybox:1.35
+    resources:
+      limits:
+        cpu: "50m"
   containers:
   - name: container01
     image: busybox:1.35
