--- a/other/restrict-clusteradmin-rolebindings-gcp-2024-003/restrict-clusteradmin-rolebindings-gcp-2024-003.yaml
+++ b/other/restrict-clusteradmin-rolebindings-gcp-2024-003/restrict-clusteradmin-rolebindings-gcp-2024-003.yaml
@@ -2,6 +2,13 @@ apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: restrict-clusteradmin-rolebindings-gcp-2024-003
+  annotations:
+    policies.kyverno.io/title: "Restrict ClusterAdmin RoleBindings (GCP-2024-003)"
+    policies.kyverno.io/category: "Security"
+    policies.kyverno.io/severity: "medium"
+    policies.kyverno.io/subject: "RoleBinding, ClusterRoleBinding, RBAC"
+    policies.kyverno.io/description: >-
+      The cluster-admin ClusterRole allows any action to be performed on any resource in the cluster and its granting should be heavily restricted. This policy prevents binding to the cluster-admin ClusterRole in RoleBinding or ClusterRoleBinding resources to the system:authenticated, system:unauthenticated, and system:anonymous subjects.
 spec:
   validationFailureAction: Enforce
   rules:
