added the missing annotations and updated the artifacthub-pkg.yml
Signed-off-by: nsagark <sagar@nirmata.com>

--- a/other/restrict-clusterrole-mutating-validating-admission-webhooks/restrict-clusterrole-mutating-validating-admission-webhooks.yaml
+++ b/other/restrict-clusterrole-mutating-validating-admission-webhooks/restrict-clusterrole-mutating-validating-admission-webhooks.yaml
@@ -6,6 +6,8 @@ metadata:
     policies.kyverno.io/title: Restrict Clusterrole for Mutating and Validating Admission Webhooks
     policies.kyverno.io/category: Other
     policies.kyverno.io/severity: medium
+    kyverno.io/kyverno-version: 1.10.7
+    kyverno.io/kubernetes-version: "1.27"
     policies.kyverno.io/subject: ClusterRole
     policies.kyverno.io/description: >-
       ClusterRoles that grant write permissions over admission webhook should be minimized to reduce powerful identities in the cluster. This policy checks to ensure write permissions are not provided to admission webhooks.
@@ -44,5 +46,5 @@ spec:
               - patch
             - key: "{{ contains(element.verbs[], '*') }}"
               operator: Equals
-              value: true  
+              value: true
 
