--- a/.github/actions/run-tests/action.yaml
+++ b/.github/actions/run-tests/action.yaml
@@ -7,6 +7,8 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Install Chainsaw
+      uses: kyverno/action-install-chainsaw@5d00c353f61f44f3b492c673420202d1b1374c3f # v0.2.6
     - name: Test with Chainsaw
       shell: bash
       run: |
