switch to audit mode
Signed-off-by: Boris 'B' Kurktchiev <boris.kurktchiev@nirmata.com>

--- a/other/restrict-clusteradmin-rolebindings-gcp-2024-003/restrict-clusteradmin-rolebindings-gcp-2024-003.yaml
+++ b/other/restrict-clusteradmin-rolebindings-gcp-2024-003/restrict-clusteradmin-rolebindings-gcp-2024-003.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/description: >-
       The cluster-admin ClusterRole allows any action to be performed on any resource in the cluster and its granting should be heavily restricted. This policy prevents binding to the cluster-admin ClusterRole in RoleBinding or ClusterRoleBinding resources to the system:authenticated, system:unauthenticated, and system:anonymous subjects.
 spec:
-  validationFailureAction: Enforce
+  validationFailureAction: Audit
   rules:
   - name: validate-restricted-cluster-admin-bindings
     match:
