--- a/other/restrict-clusteradmin-rolebindings-gcp-2024-003/restrict-clusteradmin-rolebindings-gcp-2024-003.yaml
+++ b/other/restrict-clusteradmin-rolebindings-gcp-2024-003/restrict-clusteradmin-rolebindings-gcp-2024-003.yaml
@@ -7,6 +7,8 @@ metadata:
     policies.kyverno.io/category: "Security"
     policies.kyverno.io/severity: "medium"
     policies.kyverno.io/subject: "RoleBinding, ClusterRoleBinding, RBAC"
+    kyverno.io/kubernetes-version: 1.27
+    kyverno.io/kyverno-version: 1.10
     policies.kyverno.io/description: >-
       The cluster-admin ClusterRole allows any action to be performed on any resource in the cluster and its granting should be heavily restricted. This policy prevents binding to the cluster-admin ClusterRole in RoleBinding or ClusterRoleBinding resources to the system:authenticated, system:unauthenticated, and system:anonymous subjects.
 spec:
